bug and fixes, spring security